--- a/style/master.css
+++ b/style/master.css
@@ -11,7 +11,7 @@
         margin-left: auto;
         cursor: pointer;
 
-        >span{
+        >span {
             display: flex;
             width: 100%;
             height: 2px;
@@ -23,11 +23,41 @@
         }
     }
 
-    .btn{
-    padding: 3px 8px;
-    background-color: #e11b4c;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .btn {
+        padding: 3px 8px;
+        background-color: #e11b4c;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
+
+    .acc {
+        width: 100%;
+
+        >li {
+            width: 100%;
+            border: 1px solid rgb(163, 161, 161);
+            margin-block: 10px;
+
+            * {
+                width: 100%;
+            }
+
+            >h2 {
+                height: 80px;
+                background-color: rgb(205, 202, 202);
+                padding-left: 20px;
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+            }
+
+           >p {    
+                overflow: hidden;
+                transition: 1s;
+            }
+        }
+    }
+ 
+
 }
