--- a/style/output.css
+++ b/style/output.css
@@ -7,34 +7,22 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-300: oklch(87.9% 0.169 91.605);
-    --color-amber-600: oklch(66.6% 0.179 58.318);
-    --color-amber-700: oklch(55.5% 0.163 48.998);
-    --color-emerald-600: oklch(59.6% 0.145 163.225);
-    --color-cyan-600: oklch(60.9% 0.126 221.723);
-    --color-fuchsia-800: oklch(45.2% 0.211 324.591);
-    --color-pink-100: oklch(94.8% 0.028 342.258);
-    --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-gray-600: oklch(44.6% 0.03 256.802);
+    --color-red-700: oklch(50.5% 0.213 27.518);
+    --color-gray-500: oklch(55.1% 0.027 264.364);
     --spacing: 0.25rem;
-    --text-xs: 0.75rem;
-    --text-xs--line-height: calc(1 / 0.75);
-    --text-lg: 1.125rem;
-    --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
-    --font-weight-light: 300;
-    --font-weight-normal: 400;
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --font-weight-medium: 500;
-    --font-weight-bold: 700;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
-    --animate-spin: spin 1s linear infinite;
     --blur-xl: 24px;
-    --blur-2xl: 40px;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -199,9 +187,6 @@
   .top-20 {
     top: calc(var(--spacing) * 20);
   }
-  .right-0 {
-    right: calc(var(--spacing) * 0);
-  }
   .right-1 {
     right: calc(var(--spacing) * 1);
   }
@@ -216,6 +201,9 @@
   }
   .right-5 {
     right: calc(var(--spacing) * 5);
+  }
+  .right-\[-100\%\] {
+    right: -100%;
   }
   .left-1 {
     left: calc(var(--spacing) * 1);
@@ -1435,17 +1423,8 @@
   .h-full {
     height: 100%;
   }
-  .w-0 {
-    width: calc(var(--spacing) * 0);
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
   .w-2\/12 {
     width: calc(2/12 * 100%);
-  }
-  .w-7 {
-    width: calc(var(--spacing) * 7);
   }
   .w-7\/12 {
     width: calc(7/12 * 100%);
@@ -1453,17 +1432,11 @@
   .w-full {
     width: 100%;
   }
-  .border-collapse {
-    border-collapse: collapse;
+  .w-screen {
+    width: 100vw;
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .animate-spin {
-    animation: var(--animate-spin);
-  }
-  .resize {
-    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -1487,32 +1460,11 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .bg-amber-300 {
-    background-color: var(--color-amber-300);
+  .object-cover {
+    object-fit: cover;
   }
-  .bg-amber-600 {
-    background-color: var(--color-amber-600);
-  }
-  .bg-amber-700 {
-    background-color: var(--color-amber-700);
-  }
-  .bg-cyan-600 {
-    background-color: var(--color-cyan-600);
-  }
-  .bg-emerald-600 {
-    background-color: var(--color-emerald-600);
-  }
-  .bg-fuchsia-800 {
-    background-color: var(--color-fuchsia-800);
-  }
-  .bg-gray-200 {
-    background-color: var(--color-gray-200);
-  }
-  .bg-gray-600 {
-    background-color: var(--color-gray-600);
-  }
-  .bg-pink-100 {
-    background-color: var(--color-pink-100);
+  .px-1\.5 {
+    padding-inline: calc(var(--spacing) * 1.5);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -1523,40 +1475,35 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
+  .py-4\! {
+    padding-block: calc(var(--spacing) * 4) !important;
+  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
+  }
+  .py-10\! {
+    padding-block: calc(var(--spacing) * 10) !important;
+  }
+  .pt-0\.5 {
+    padding-top: calc(var(--spacing) * 0.5);
   }
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
-  .text-lg {
-    font-size: var(--text-lg);
-    line-height: var(--tw-leading, var(--text-lg--line-height));
-  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
-  .text-xs {
-    font-size: var(--text-xs);
-    line-height: var(--tw-leading, var(--text-xs--line-height));
-  }
-  .font-bold {
-    --tw-font-weight: var(--font-weight-bold);
-    font-weight: var(--font-weight-bold);
-  }
-  .font-light {
-    --tw-font-weight: var(--font-weight-light);
-    font-weight: var(--font-weight-light);
   }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
-  .font-normal {
-    --tw-font-weight: var(--font-weight-normal);
-    font-weight: var(--font-weight-normal);
+  .text-gray-500 {
+    color: var(--color-gray-500);
+  }
+  .text-red-700 {
+    color: var(--color-red-700);
   }
   .italic {
     font-style: italic;
@@ -1564,56 +1511,22 @@
   .underline {
     text-decoration-line: underline;
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .backdrop-blur-2xl {
-    --tw-backdrop-blur: blur(var(--blur-2xl));
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .backdrop-blur-xl {
     --tw-backdrop-blur: blur(var(--blur-xl));
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
-  .backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
   .transition-all {
     transition-property: all;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .duration-500 {
-    --tw-duration: 500ms;
-    transition-duration: 500ms;
-  }
-  .duration-600 {
-    --tw-duration: 600ms;
-    transition-duration: 600ms;
-  }
   .duration-700 {
     --tw-duration: 700ms;
     transition-duration: 700ms;
-  }
-  .duration-800 {
-    --tw-duration: 800ms;
-    transition-duration: 800ms;
-  }
-  .duration-1000 {
-    --tw-duration: 1000ms;
-    transition-duration: 1000ms;
   }
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
@@ -1622,6 +1535,11 @@
   .\*\:flex {
     :is(& > *) {
       display: flex;
+    }
+  }
+  .\*\:h-auto {
+    :is(& > *) {
+      height: auto;
     }
   }
   .\*\:h-full {
@@ -1634,19 +1552,19 @@
       width: 100%;
     }
   }
+  .\*\:flex-wrap {
+    :is(& > *) {
+      flex-wrap: wrap;
+    }
+  }
   .\*\:justify-center {
     :is(& > *) {
       justify-content: center;
     }
   }
-  .\*\:p-3 {
+  .\*\:p-6 {
     :is(& > *) {
-      padding: calc(var(--spacing) * 3);
-    }
-  }
-  .\*\:p-5 {
-    :is(& > *) {
-      padding: calc(var(--spacing) * 5);
+      padding: calc(var(--spacing) * 6);
     }
   }
   .\*\:px-4 {
@@ -1654,10 +1572,9 @@
       padding-inline: calc(var(--spacing) * 4);
     }
   }
-  .\*\:font-medium {
+  .\*\:py-3 {
     :is(& > *) {
-      --tw-font-weight: var(--font-weight-medium);
-      font-weight: var(--font-weight-medium);
+      padding-block: calc(var(--spacing) * 3);
     }
   }
   .md\:flex {
@@ -1675,14 +1592,28 @@
       width: calc(1/12 * 100%);
     }
   }
-  .md\:w-3\/12 {
-    @media (width >= 48rem) {
-      width: calc(3/12 * 100%);
-    }
-  }
   .md\:w-4\/12 {
     @media (width >= 48rem) {
       width: calc(4/12 * 100%);
+    }
+  }
+  .md\:text-2xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .md\:text-3xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
+  .\*\:md\:px-5 {
+    :is(& > *) {
+      @media (width >= 48rem) {
+        padding-inline: calc(var(--spacing) * 5);
+      }
     }
   }
   .lg\:container {
@@ -1705,84 +1636,9 @@
       }
     }
   }
-  .lg\:mr-0 {
-    @media (width >= 64rem) {
-      margin-right: calc(var(--spacing) * 0);
-    }
-  }
-  .lg\:mr-1 {
-    @media (width >= 64rem) {
-      margin-right: calc(var(--spacing) * 1);
-    }
-  }
-  .lg\:ml-3 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 3);
-    }
-  }
-  .lg\:ml-4 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 4);
-    }
-  }
-  .lg\:ml-5 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 5);
-    }
-  }
-  .lg\:ml-6 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 6);
-    }
-  }
-  .lg\:ml-7 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 7);
-    }
-  }
-  .lg\:ml-10 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 10);
-    }
-  }
   .lg\:ml-36 {
     @media (width >= 64rem) {
       margin-left: calc(var(--spacing) * 36);
-    }
-  }
-  .lg\:ml-38 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 38);
-    }
-  }
-  .lg\:ml-40 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 40);
-    }
-  }
-  .lg\:ml-52 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 52);
-    }
-  }
-  .lg\:ml-64 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 64);
-    }
-  }
-  .lg\:ml-68 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 68);
-    }
-  }
-  .lg\:ml-72 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 72);
-    }
-  }
-  .lg\:ml-auto {
-    @media (width >= 64rem) {
-      margin-left: auto;
     }
   }
   .lg\:flex {
@@ -1795,69 +1651,22 @@
       width: calc(3/12 * 100%);
     }
   }
-  .xl\:mr-9 {
-    @media (width >= 80rem) {
-      margin-right: calc(var(--spacing) * 9);
+  .lg\:text-2xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
-  .xl\:mr-96 {
-    @media (width >= 80rem) {
-      margin-right: calc(var(--spacing) * 96);
+  .lg\:text-3xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
-  .xl\:mr-\[-50px\] {
-    @media (width >= 80rem) {
-      margin-right: -50px;
-    }
-  }
-  .xl\:mr-\[-\] {
-    @media (width >= 80rem) {
-      margin-right: -;
-    }
-  }
-  .xl\:ml-6 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 6);
-    }
-  }
-  .xl\:ml-7 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 7);
-    }
-  }
-  .xl\:ml-8 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 8);
-    }
-  }
-  .xl\:ml-9 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 9);
-    }
-  }
-  .xl\:ml-60 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 60);
-    }
-  }
-  .xl\:ml-68 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 68);
-    }
-  }
-  .xl\:ml-72 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 72);
-    }
-  }
-  .xl\:ml-76 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 76);
-    }
-  }
-  .xl\:ml-78 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 78);
+  .lg\:text-xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
   .xl\:ml-79 {
@@ -1865,55 +1674,72 @@
       margin-left: calc(var(--spacing) * 79);
     }
   }
-  .xl\:ml-80 {
+  .xl\:px-7 {
     @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 80);
+      padding-inline: calc(var(--spacing) * 7);
     }
   }
-  .xl\:ml-96 {
+  .xl\:py-10 {
     @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 96);
+      padding-block: calc(var(--spacing) * 10);
     }
   }
-  .\32 xl\:ml-9 {
-    @media (width >= 96rem) {
-      margin-left: calc(var(--spacing) * 9);
+  .xl\:text-2xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
-  .\32 xl\:ml-96 {
-    @media (width >= 96rem) {
-      margin-left: calc(var(--spacing) * 96);
+  .xl\:text-3xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
-  .\32 xl\:ml-99 {
-    @media (width >= 96rem) {
-      margin-left: calc(var(--spacing) * 99);
+  .xl\:text-4xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
-  .\32 xl\:ml-\[300px\] {
+  .\32 xl\:ml-\[340px\] {
     @media (width >= 96rem) {
-      margin-left: 300px;
+      margin-left: 340px;
     }
   }
-  .\32 xl\:ml-\[400px\] {
+  .\32 xl\:px-9 {
     @media (width >= 96rem) {
-      margin-left: 400px;
+      padding-inline: calc(var(--spacing) * 9);
     }
   }
-  .\32 xl\:ml-\[480px\] {
+  .\32 xl\:text-2xl {
     @media (width >= 96rem) {
-      margin-left: 480px;
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
-  .\32 xl\:ml-\[500px\] {
+  .\32 xl\:text-3xl {
     @media (width >= 96rem) {
-      margin-left: 500px;
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
   .\32 xl\:text-4xl {
     @media (width >= 96rem) {
       font-size: var(--text-4xl);
       line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .\32 xl\:text-5xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .\32 xl\:text-xl {
+    @media (width >= 96rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
 }
@@ -1944,6 +1770,29 @@
     justify-content: center;
     align-items: center;
   }
+  .acc {
+    width: 100%;
+    >li {
+      width: 100%;
+      border: 1px solid rgb(163, 161, 161);
+      margin-block: 10px;
+      * {
+        width: 100%;
+      }
+      >h2 {
+        height: 80px;
+        background-color: rgb(205, 202, 202);
+        padding-left: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+      }
+      >p {
+        overflow: hidden;
+        transition: 1s;
+      }
+    }
+  }
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -1973,11 +1822,6 @@
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
-}
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
 }
 @property --tw-blur {
   syntax: "*";
@@ -2076,11 +1920,6 @@
   syntax: "*";
   inherits: false;
 }
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -2091,7 +1930,6 @@
       --tw-skew-y: initial;
       --tw-border-style: solid;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
